--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
+# This file lists all individuals having contributed content to the repository.
+
 Milla Jesso <millajesso2000@gmail.com>
 Malanga Sandrine <sandrinemalanga2001@gmail.com>
